--- a/Skis.html
+++ b/Skis.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
+<style>
+  /* Common Styles */
+  .image-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 3 columns on larger screens */
+      gap: 15px;
+  }
+  .image-grid img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+  }
+
+  /* Media Query for Tablets and smaller screens */
+  @media (max-width: 1024px) {
+      .image-grid {
+          grid-template-columns: repeat(2, 1fr); /* 2 columns on tablets */
+      }
+  }
+
+  /* Media Query for Mobile screens */
+  @media (max-width: 768px) {
+      .image-grid {
+          grid-template-columns: 1fr; /* 1 column on mobile */
+      }
+  }
+</style>
+
 
 <body>
     <header class="bg-light p-3">
@@ -29,7 +57,7 @@
         <img src="images/Surface2023Logo-01 1.png" alt="">
     </section>
 
-   <section class="heroSki">
+   7<section class="heroSki">
         <h1>Skis</h1>
       
     </section>
