--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+5hb7O9z69ER9l3tNdNaeJk0BSOKG+TAn8sxYj2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    
 </head>
 
 <body>
 
   
-    <header class="bg-light p-3">
-        <div class="container d-flex justify-content-between">
-          
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Accessories</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Skis</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header class="bg-light p-3">
+    <div class="container d-flex justify-content-between">
+        <nav>
+            <ul class="Navigation">
+                <li class="nav-item"><a class="nav-link" href="Skis.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link" href="Skis.html">Skis</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 
     <section class="RedBar"></section>
 
